# NutriBot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml  setup.py
NutriBot.egg-info/: PKG-INFO  SOURCES.txt
config/: settings.py
notebooks/: 00_data_exploration.ipynb  01_embedding_models.ipynb  02_retrieval_strategies.ipynb  03_prompt_engineering.ipynb  04_rag_pipeline_eval.ipynb  05_finetuning_prep.ipynb  README.md
scripts/: embed_and_upload.py  setup_pinecone.py
src/: rag_pipeline.py
src/data_ingestion/: __init__.py  chunk_loader.py  docling_parser.py  processing_job.py  s3_utils.py  semantic_chunker.py
src/embeddings/: __init__.py  base.py  bge.py  factory.py
src/prompting/: __init__.py  prompt_manager.py
src/reranking/: __init__.py  reranker.py
src/retrieval/: __init__.py  base.py  hybrid_pinecone.py  semantic.py
src/utils/: __init__.py  logging_config.py  metrics.py  text_utils.py
static/: index.html
